update pivot and pivot table

--- a/data/pandas_tute/pivot/pivot.ipynb
+++ b/data/pandas_tute/pivot/pivot.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -51,6 +51,7 @@
        "      <th>embark_town</th>\n",
        "      <th>alive</th>\n",
        "      <th>alone</th>\n",
+       "      <th>age_b</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -71,6 +72,7 @@
        "      <td>Southampton</td>\n",
        "      <td>no</td>\n",
        "      <td>False</td>\n",
+       "      <td>(18, 80]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -89,6 +91,7 @@
        "      <td>Cherbourg</td>\n",
        "      <td>yes</td>\n",
        "      <td>False</td>\n",
+       "      <td>(18, 80]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -107,6 +110,7 @@
        "      <td>Southampton</td>\n",
        "      <td>yes</td>\n",
        "      <td>True</td>\n",
+       "      <td>(18, 80]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -125,6 +129,7 @@
        "      <td>Southampton</td>\n",
        "      <td>yes</td>\n",
        "      <td>False</td>\n",
+       "      <td>(18, 80]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -143,6 +148,7 @@
        "      <td>Southampton</td>\n",
        "      <td>no</td>\n",
        "      <td>True</td>\n",
+       "      <td>(18, 80]</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -156,15 +162,15 @@
        "3         1       1  female  35.0      1      0  53.1000        S  First   \n",
        "4         0       3    male  35.0      0      0   8.0500        S  Third   \n",
        "\n",
-       "     who  adult_male deck  embark_town alive  alone  \n",
-       "0    man        True  NaN  Southampton    no  False  \n",
-       "1  woman       False    C    Cherbourg   yes  False  \n",
-       "2  woman       False  NaN  Southampton   yes   True  \n",
-       "3  woman       False    C  Southampton   yes  False  \n",
-       "4    man        True  NaN  Southampton    no   True  "
+       "     who  adult_male deck  embark_town alive  alone     age_b  \n",
+       "0    man        True  NaN  Southampton    no  False  (18, 80]  \n",
+       "1  woman       False    C    Cherbourg   yes  False  (18, 80]  \n",
+       "2  woman       False  NaN  Southampton   yes   True  (18, 80]  \n",
+       "3  woman       False    C  Southampton   yes  False  (18, 80]  \n",
+       "4    man        True  NaN  Southampton    no   True  (18, 80]  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -172,42 +178,49 @@
    "source": [
     "# titanic\n",
     "import seaborn as sns\n",
-    "import matplotlib.pyplot as plt\n",
     "\n",
     "titanic = sns.load_dataset('titanic')\n",
+    "\n",
+    "titanic[\"age_b\"] = pd.cut(titanic[\"age\"], [0, 18, 80])\n",
+    "\n",
     "titanic.head()"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 12,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "sex     class \n",
-       "female  First     0.968085\n",
-       "        Second    0.921053\n",
-       "        Third     0.500000\n",
-       "male    First     0.368852\n",
-       "        Second    0.157407\n",
-       "        Third     0.135447\n",
-       "Name: survived, dtype: float64"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "titanic.groupby([\"sex\", \"class\"], observed=False)[\"survived\"].aggregate(\"mean\")"
+    "### aggregated data with multiple columns as multiindex series"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sex     class \n",
+      "female  First     0.968085\n",
+      "        Second    0.921053\n",
+      "        Third     0.500000\n",
+      "male    First     0.368852\n",
+      "        Second    0.157407\n",
+      "        Third     0.135447\n",
+      "Name: survived, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "agg = titanic.groupby([\"sex\", \"class\"], observed=False)[\"survived\"].aggregate(\"mean\")\n",
+    "print(agg)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -266,18 +279,54 @@
        "male    0.368852  0.157407  0.135447"
       ]
      },
+     "execution_count": 7,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# manual pivot\n",
-    "titanic.groupby([\"sex\", \"class\"], observed=False)[\"survived\"].aggregate(\"mean\").unstack()"
+    "# manual pivot via unstack which unstacks the last level of the multiindex\n",
+    "agg.unstack()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### aggregated data with multiple columns"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "               count  survived_pct\n",
+      "sex    class                      \n",
+      "female First      94      0.968085\n",
+      "       Second     76      0.921053\n",
+      "       Third     144      0.500000\n",
+      "male   First     122      0.368852\n",
+      "       Second    108      0.157407\n",
+      "       Third     347      0.135447\n"
+     ]
+    }
+   ],
+   "source": [
+    "agg = titanic.groupby([\"sex\", \"class\"], observed=False).agg(\n",
+    "    count= (\"survived\", \"count\"),\n",
+    "    survived_pct= (\"survived\", \"mean\")\n",
+    ")\n",
+    "print(agg)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -336,127 +385,21 @@
        "male    0.368852  0.157407  0.135447"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# pivot_table\n",
-    "titanic.pivot_table(\"survived\", index = \"sex\", columns = \"class\", observed=False)"
+    "# pivot\n",
+    "agg.reset_index().pivot(index=\"sex\", columns=\"class\", values=\"survived_pct\")"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 16,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>class</th>\n",
-       "      <th>First</th>\n",
-       "      <th>Second</th>\n",
-       "      <th>Third</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>sex</th>\n",
-       "      <th>age</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th rowspan=\"2\" valign=\"top\">female</th>\n",
-       "      <th>(0, 18]</th>\n",
-       "      <td>0.909091</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0.511628</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>(18, 80]</th>\n",
-       "      <td>0.972973</td>\n",
-       "      <td>0.900000</td>\n",
-       "      <td>0.423729</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th rowspan=\"2\" valign=\"top\">male</th>\n",
-       "      <th>(0, 18]</th>\n",
-       "      <td>0.800000</td>\n",
-       "      <td>0.600000</td>\n",
-       "      <td>0.215686</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>(18, 80]</th>\n",
-       "      <td>0.375000</td>\n",
-       "      <td>0.071429</td>\n",
-       "      <td>0.133663</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "class               First    Second     Third\n",
-       "sex    age                                   \n",
-       "female (0, 18]   0.909091  1.000000  0.511628\n",
-       "       (18, 80]  0.972973  0.900000  0.423729\n",
-       "male   (0, 18]   0.800000  0.600000  0.215686\n",
-       "       (18, 80]  0.375000  0.071429  0.133663"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "# multi-level pivot\n",
-    "age = pd.cut(titanic[\"age\"], [0, 18, 80])\n",
-    "titanic.pivot_table(\"survived\", index=[\"sex\", age], columns=\"class\", observed=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['survived', 'pclass', 'sex', 'age', 'sibsp', 'parch', 'fare',\n",
-       "       'embarked', 'class', 'who', 'adult_male', 'deck', 'embark_town',\n",
-       "       'alive', 'alone'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "titanic.columns"
+    "### aggregated data with >2 columns"
    ]
   },
   {
@@ -465,76 +408,37 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th>class</th>\n",
-       "      <th>First</th>\n",
-       "      <th>Second</th>\n",
-       "      <th>Third</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>sex</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>female</th>\n",
-       "      <td>91</td>\n",
-       "      <td>70</td>\n",
-       "      <td>72</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>male</th>\n",
-       "      <td>45</td>\n",
-       "      <td>17</td>\n",
-       "      <td>47</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "class   First  Second  Third\n",
-       "sex                         \n",
-       "female     91      70     72\n",
-       "male       45      17     47"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                        count  survived_pct\n",
+      "sex    class  age_b                        \n",
+      "female First  (0, 18]      11      0.909091\n",
+      "              (18, 80]     74      0.972973\n",
+      "       Second (0, 18]      14      1.000000\n",
+      "              (18, 80]     60      0.900000\n",
+      "       Third  (0, 18]      43      0.511628\n",
+      "              (18, 80]     59      0.423729\n",
+      "male   First  (0, 18]       5      0.800000\n",
+      "              (18, 80]     96      0.375000\n",
+      "       Second (0, 18]      15      0.600000\n",
+      "              (18, 80]     84      0.071429\n",
+      "       Third  (0, 18]      51      0.215686\n",
+      "              (18, 80]    202      0.133663\n"
+     ]
     }
    ],
    "source": [
-    "# aggfunc\n",
-    "titanic.pivot_table(\"survived\", index=\"sex\", columns=\"class\", \n",
-    "            aggfunc={\"survived\": \"sum\"},\n",
-    "            observed=False)"
+    "agg = titanic.groupby([\"sex\", \"class\",\"age_b\"], observed=False).agg(\n",
+    "    count= (\"survived\", \"count\"),\n",
+    "    survived_pct= (\"survived\", \"mean\")\n",
+    ")\n",
+    "print(agg)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -557,66 +461,82 @@
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
-       "      <th>class</th>\n",
-       "      <th>First</th>\n",
-       "      <th>Second</th>\n",
-       "      <th>Third</th>\n",
-       "      <th>All</th>\n",
+       "      <th></th>\n",
+       "      <th>age_b</th>\n",
+       "      <th>(0, 18]</th>\n",
+       "      <th>(18, 80]</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>sex</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
+       "      <th>class</th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>female</th>\n",
-       "      <td>0.968085</td>\n",
-       "      <td>0.921053</td>\n",
-       "      <td>0.500000</td>\n",
-       "      <td>0.742038</td>\n",
+       "      <th rowspan=\"3\" valign=\"top\">female</th>\n",
+       "      <th>First</th>\n",
+       "      <td>0.909091</td>\n",
+       "      <td>0.972973</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>male</th>\n",
-       "      <td>0.368852</td>\n",
-       "      <td>0.157407</td>\n",
-       "      <td>0.135447</td>\n",
-       "      <td>0.188908</td>\n",
+       "      <th>Second</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.900000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>All</th>\n",
-       "      <td>0.629630</td>\n",
-       "      <td>0.472826</td>\n",
-       "      <td>0.242363</td>\n",
-       "      <td>0.383838</td>\n",
+       "      <th>Third</th>\n",
+       "      <td>0.511628</td>\n",
+       "      <td>0.423729</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"3\" valign=\"top\">male</th>\n",
+       "      <th>First</th>\n",
+       "      <td>0.800000</td>\n",
+       "      <td>0.375000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Second</th>\n",
+       "      <td>0.600000</td>\n",
+       "      <td>0.071429</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Third</th>\n",
+       "      <td>0.215686</td>\n",
+       "      <td>0.133663</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "class      First    Second     Third       All\n",
-       "sex                                           \n",
-       "female  0.968085  0.921053  0.500000  0.742038\n",
-       "male    0.368852  0.157407  0.135447  0.188908\n",
-       "All     0.629630  0.472826  0.242363  0.383838"
+       "age_b           (0, 18]  (18, 80]\n",
+       "sex    class                     \n",
+       "female First   0.909091  0.972973\n",
+       "       Second  1.000000  0.900000\n",
+       "       Third   0.511628  0.423729\n",
+       "male   First   0.800000  0.375000\n",
+       "       Second  0.600000  0.071429\n",
+       "       Third   0.215686  0.133663"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# margins\n",
-    "titanic.pivot_table(\"survived\", index=\"sex\", columns=\"class\",\n",
-    "            margins=True,\n",
-    "            # margins_name=\"Total\",\n",
-    "            observed=False)"
+    "# pivot\n",
+    "agg.reset_index(level=2).pivot(columns=\"age_b\", values=\"survived_pct\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
