update cont normal

--- a/math_scripts/distributions/cont_normal.ipynb
+++ b/math_scripts/distributions/cont_normal.ipynb
@@ -74,6 +74,68 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(norm.cdf(0.675, loc=0, scale=1) - 0.5)*2 = 0.5003242350564459\n",
+      "(norm.cdf(1, loc=0, scale=1) - 0.5)*2 = 0.6826894921370859\n",
+      "(norm.cdf(1.96, loc=0, scale=1) - 0.5)*2 = 0.950004209703559\n",
+      "(norm.cdf(3, loc=0, scale=1) - 0.5)*2 = 0.9973002039367398\n"
+     ]
+    }
+   ],
+   "source": [
+    "from scipy.stats import norm\n",
+    "\n",
+    "# about 50% of the data falls within 0.675 standard deviation from the mean\n",
+    "print(f\"{(norm.cdf(0.675, loc=0, scale=1) - 0.5)*2 = }\")\n",
+    "\n",
+    "# about 68% of the data falls within 1 standard deviation from the mean\n",
+    "print(f\"{(norm.cdf(1, loc=0, scale=1) - 0.5)*2 = }\")\n",
+    "\n",
+    "# about 95% of the data falls within 1.96 standard deviations from the mean\n",
+    "print(f\"{(norm.cdf(1.96, loc=0, scale=1) - 0.5)*2 = }\")\n",
+    "\n",
+    "# about 99.7% of the data falls within 3 standard deviations from the mean\n",
+    "print(f\"{(norm.cdf(3, loc=0, scale=1) - 0.5)*2 = }\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count    10000.000000\n",
+       "mean         0.001478\n",
+       "std          0.997623\n",
+       "min         -3.336696\n",
+       "25%         -0.673729\n",
+       "50%         -0.003893\n",
+       "75%          0.658305\n",
+       "max          3.621547\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "samples = norm.rvs(size=10000, loc=0, scale=1)\n",
+    "import pandas as pd\n",
+    "pd.Series(samples).describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
    "outputs": [
