reorganise pd excel csv related

--- a/data/pandas_tute/csv_excel/excel.ipynb
+++ b/data/pandas_tute/csv_excel/excel.ipynb
@@ -24,7 +24,7 @@
     "\n",
     "location = (\n",
     "    os.path.expanduser(\"~\")\n",
-    "    + r\"\\Projects\\python_collection\\general_applic\\office\\excel\\table.xlsx\"\n",
+    "    + r\"excel_table.xlsx\"\n",
     ")\n",
     "\n",
     "# read the Excel file\n",
