update csv and excel

--- a/data/pandas_tute/csv_excel/csv.ipynb
+++ b/data/pandas_tute/csv_excel/csv.ipynb
@@ -14,41 +14,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### read only part of csv"
+    "### usual case"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0: Report Start Date,01/07/2023\n",
-      "1: Report End Date,11/03/2024\n",
-      "2: Report Creation Date,11/03/2024 16:05:22\n",
-      "3: \n",
-      "4: asdf\n",
-      "5: \n",
-      "6: 11, sadf, sadf\n",
-      "7: \n",
-      "8: 0\n",
-      "9: \"Code\",\"Name\",\"Units\"\n"
-     ]
-    }
-   ],
-   "source": [
-    "# examine the first few lines of the raw csv file\n",
-    "with open('messy_csv.csv', 'r') as f:\n",
-    "    for i in range(10):\n",
-    "        print(f\"{i}: {f.readline()}\", end='')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +71,109 @@
        "1    Z    Z     15"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_csv(\n",
+    "    \"clean_csv.csv\",\n",
+    ")\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### read only part of csv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0: Report Start Date,01/07/2023\n",
+      "1: Report End Date,11/03/2024\n",
+      "2: Report Creation Date,11/03/2024 16:05:22\n",
+      "3: \n",
+      "4: asdf\n",
+      "5: \n",
+      "6: 11, sadf, sadf\n",
+      "7: \n",
+      "8: 0\n",
+      "9: \"Code\",\"Name\",\"Units\"\n"
+     ]
+    }
+   ],
+   "source": [
+    "# examine the first few lines of the raw csv file\n",
+    "with open('messy_csv.csv', 'r') as f:\n",
+    "    for i in range(10):\n",
+    "        print(f\"{i}: {f.readline()}\", end='')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Code</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Units</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>A</td>\n",
+       "      <td>A</td>\n",
+       "      <td>13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Z</td>\n",
+       "      <td>Z</td>\n",
+       "      <td>15</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Code Name  Units\n",
+       "0    A    A     13\n",
+       "1    Z    Z     15"
+      ]
+     },
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
