--- a/data/pandas_tute/csv_excel/excel.ipynb
+++ b/data/pandas_tute/csv_excel/excel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -22,19 +22,32 @@
     "import pandas as pd\n",
     "import os\n",
     "\n",
-    "location = (\n",
-    "    os.path.expanduser(\"~\")\n",
-    "    + r\"excel_table.xlsx\"\n",
-    ")\n",
-    "\n",
     "# read the Excel file\n",
     "# skip the first 10 rows, read the next 5 rows, and use the columns from 'B' to 'D'\n",
     "df = pd.read_excel(\n",
-    "    location, sheet_name=\"Sheet1\", skiprows=range(1, 2), nrows=5, usecols=\"B:D\"\n",
+    "    r\"excel_table.xlsx\",\n",
+    "    sheet_name=\"Sheet1\",\n",
+    "    skiprows=range(1, 2),\n",
+    "    nrows=5,\n",
+    "    usecols=\"B:D\",\n",
     ")\n",
     "\n",
     "print(df)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
