add inline csv to csv

--- a/data/pandas_tute/csv_excel/csv.ipynb
+++ b/data/pandas_tute/csv_excel/csv.ipynb
@@ -190,18 +190,105 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### inline csv form/to df"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Code</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Units</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>A</td>\n",
+       "      <td>A</td>\n",
+       "      <td>13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Z</td>\n",
+       "      <td>Z</td>\n",
+       "      <td>15</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Code Name  Units\n",
+       "0    A    A     13\n",
+       "1    Z    Z     15"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "from io import StringIO\n",
+    "\n",
+    "the_string = '''\n",
+    "Code,Name,Units\n",
+    "A,A,13\n",
+    "Z,Z,15\n",
+    "'''\n",
+    "df = pd.read_csv(StringIO(the_string))\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Code,Name,Units\n",
+      "A,A,13\n",
+      "Z,Z,15\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_string = df.to_csv(index=False)\n",
+    "df_string.replace('\\r\\n', '\\n')\n",
+    "print(df_string)"
+   ]
   }
  ],
  "metadata": {
