simplify code in csv

--- a/data/pandas_tute/csv_excel/csv.ipynb
+++ b/data/pandas_tute/csv_excel/csv.ipynb
@@ -289,6 +289,26 @@
     "df_string.replace('\\r\\n', '\\n')\n",
     "print(df_string)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Code,Name,Units\n",
+      "A,A,13\n",
+      "Z,Z,15\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df.to_csv(index=False).replace('\\r\\n', '\\n'))"
+   ]
   }
  ],
  "metadata": {
